Avoid overflow from display

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ body {
 	display: flex;
 	justify-content: end;
 	align-items: end;
+	overflow: hidden;
+	white-space: nowrap;
+  	text-overflow: ellipsis;
 }
 .keys-container {
 	height: 100%;
